<resources>
    <string name="app_name">CoopangEats</string>

    <!-- BottomNav -->
    <string name="BottomNav_Home">홈</string>
    <string name="BottomNav_Search">검색</string>
    <string name="BottomNav_Zzim">즐겨찾기</string>
    <string name="BottomNav_OrderList">주문내역</string>
    <string name="BottomNav_MyEats">My이츠</string>

    <!-- BeforeStart -->

    <string name="BeforeStart_start">시작하기</string>


    <!-- HomeFragment -->
    <string name="HomeFragment_input_Location">주소 입력하기</string>

    <!-- HomeFragmentWithoutLocation -->
    <string name="HomeFragmentWOL_header_txt_1">지금 어디에 계신가요?</string>
    <string name="HomeFragmentWOL_header_txt_2">주문할 지역을 선택해보세요.</string>
    <string name="HomeFragmentWOL_header_txt_3">내 주변 상점들을 빠르게 살펴볼 수 있습니다.</string>
    <string name="HomeFragmentWOL_txt_select_location">주문 지역 선택</string>

    <!-- HomeFragmentWithLocation -->
    <string name="HomeFragmentWL_see_all_events">이벤트 전체보기</string>
    <string name="HomeFragmentWL_event_counts"> %d / %d</string>
    <string name="HomeFragmentWL_authed_store">인증맛집</string>
    <string name="HomeFragmentWL_storeList_title">골라먹는 맛집</string>
    <string name="HomeFragmentWL_Cheetha_delivery">치타배달</string>
    <string name="HomeFragmentWL_Blue_Ribbon">블루리본</string>

</resources>