<?xml version="1.0" encoding="utf-8"?>

<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto">

    <data>

        <variable
            name="fragment"
            type="com.chunb.coopangeats.src.home.homewl.HomeFragmentWL" />

        <variable
            name="viewModel"
            type="com.chunb.coopangeats.src.MainViewModel" />
    </data>

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <androidx.constraintlayout.widget.ConstraintLayout
            android:id="@+id/fg_home_wl_layout_toolbanner"
            android:layout_width="match_parent"
            android:layout_height="?actionBarSize"
            android:background="@color/white"
            android:elevation="1dp"
            android:visibility="gone"
            app:layout_constraintTop_toTopOf="parent">

            <TextView
                android:id="@+id/fg_home_wl_tv_toolbanner_authed_store"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/HomeFragmentWL_authed_store"
                android:textColor="@color/black"
                android:textSize="14sp"
                android:textStyle="bold"
                android:layout_marginStart="15dp"
                app:layout_constraintTop_toTopOf="parent"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintStart_toStartOf="parent" />

            <ImageView
                android:id="@+id/fg_home_wl_iv_toolbanner_cheetha_delivery"
                android:layout_width="25dp"
                android:layout_height="25dp"
                android:src="@drawable/ic_cheeta_delivery"
                android:layout_marginStart="15dp"
                app:layout_constraintTop_toTopOf="@id/fg_home_wl_tv_toolbanner_authed_store"
                app:layout_constraintBottom_toBottomOf="@id/fg_home_wl_tv_toolbanner_authed_store"
                app:layout_constraintStart_toEndOf="@id/fg_home_wl_tv_toolbanner_authed_store" />

            <TextView
                android:id="@+id/fg_home_wl_tv_toolbanner_cheetha_delivery"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/HomeFragmentWL_Cheetha_delivery"
                android:textSize="13sp"
                android:textColor="@color/color_5e686f"
                android:layout_marginStart="5dp"
                app:layout_constraintTop_toTopOf="@id/fg_home_wl_iv_toolbanner_cheetha_delivery"
                app:layout_constraintBottom_toBottomOf="@id/fg_home_wl_iv_toolbanner_cheetha_delivery"
                app:layout_constraintStart_toEndOf="@id/fg_home_wl_iv_toolbanner_cheetha_delivery" />

            <ImageView
                android:id="@+id/fg_home_wl_iv_toolbanner_blue_ribbon"
                android:layout_width="25dp"
                android:layout_height="25dp"
                android:src="@drawable/ic_blue_ribbon"
                android:layout_marginStart="10dp"
                app:layout_constraintTop_toTopOf="@id/fg_home_wl_iv_toolbanner_cheetha_delivery"
                app:layout_constraintBottom_toBottomOf="@id/fg_home_wl_iv_toolbanner_cheetha_delivery"
                app:layout_constraintStart_toEndOf="@id/fg_home_wl_tv_toolbanner_cheetha_delivery" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/HomeFragmentWL_Blue_Ribbon"
                android:textColor="@color/color_5e686f"
                android:textSize="13sp"
                android:layout_marginStart="5dp"
                app:layout_constraintTop_toTopOf="@id/fg_home_wl_iv_toolbanner_blue_ribbon"
                app:layout_constraintBottom_toBottomOf="@id/fg_home_wl_iv_toolbanner_blue_ribbon"
                app:layout_constraintStart_toEndOf="@id/fg_home_wl_iv_toolbanner_blue_ribbon" />

        </androidx.constraintlayout.widget.ConstraintLayout>

        <androidx.core.widget.NestedScrollView
            android:id="@+id/fg_home_wl_layout_scroll"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            targetView="@{fragment.ToolbannerTargetView()}"
            toolbanner="@{fragment.ToolbannerView()}"
            stickyview="@{fragment.StickyView()}"
            app:layout_constraintTop_toTopOf="parent">

            <androidx.constraintlayout.widget.ConstraintLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent">

                <androidx.viewpager2.widget.ViewPager2
                    android:id="@+id/fg_home_wl_vp_event_banner"
                    setIndicator="@{fragment.VPCheckTextView()}"
                    setVPList="@{viewModel.homeEventBanner}"
                    android:layout_width="match_parent"
                    android:layout_height="175dp"
                    app:layout_constraintTop_toTopOf="parent" />

                <androidx.constraintlayout.widget.ConstraintLayout
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_margin="7dp"
                    android:background="@drawable/bg_000000_40_20"
                    app:layout_constraintEnd_toEndOf="@id/fg_home_wl_vp_event_banner"
                    app:layout_constraintTop_toTopOf="@id/fg_home_wl_vp_event_banner">

                    <TextView
                        android:id="@+id/fg_home_wl_tv_event_indicator"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_marginHorizontal="8dp"
                        android:layout_marginVertical="3dp"
                        android:text="1/21"
                        android:textColor="@color/white"
                        android:textSize="10sp"
                        app:layout_constraintBottom_toBottomOf="parent"
                        app:layout_constraintEnd_toEndOf="parent"
                        app:layout_constraintStart_toStartOf="parent"
                        app:layout_constraintTop_toTopOf="parent" />

                </androidx.constraintlayout.widget.ConstraintLayout>

                <androidx.constraintlayout.widget.ConstraintLayout
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginEnd="10dp"
                    android:layout_marginBottom="15dp"
                    android:background="@drawable/bg_000000_60_20"
                    app:layout_constraintBottom_toBottomOf="@id/fg_home_wl_vp_event_banner"
                    app:layout_constraintEnd_toEndOf="@id/fg_home_wl_vp_event_banner">

                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_marginHorizontal="8dp"
                        android:layout_marginVertical="3dp"
                        android:text="@string/HomeFragmentWL_see_all_events"
                        android:textColor="@color/white"
                        android:textSize="12sp"
                        android:textStyle="bold"
                        app:layout_constraintBottom_toBottomOf="parent"
                        app:layout_constraintEnd_toEndOf="parent"
                        app:layout_constraintStart_toStartOf="parent"
                        app:layout_constraintTop_toTopOf="parent" />

                </androidx.constraintlayout.widget.ConstraintLayout>

                <androidx.recyclerview.widget.RecyclerView
                    android:id="@+id/fg_home_wl_rv_categories"
                    setRv="@{viewModel.homeCategories}"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="5dp"
                    android:clipToPadding="false"
                    android:orientation="horizontal"
                    android:paddingHorizontal="20dp"
                    app:layoutManager="androidx.recyclerview.widget.LinearLayoutManager"
                    app:layout_constraintTop_toBottomOf="@id/fg_home_wl_vp_event_banner" />

                <View
                    android:id="@+id/fg_home_wl_view_center_banner_divider"
                    android:layout_width="match_parent"
                    android:layout_height="8dp"
                    android:layout_marginTop="10dp"
                    android:background="@color/color_f4f6f8"
                    app:layout_constraintTop_toBottomOf="@id/fg_home_wl_rv_categories" />

                <ImageView
                    android:id="@+id/fg_home_wl_iv_center_banner"
                    android:layout_width="match_parent"
                    android:layout_height="115dp"
                    android:src="@drawable/bg_home_wl_center_event_banner"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toBottomOf="@id/fg_home_wl_view_center_banner_divider" />

                <TextView
                    android:id="@+id/fg_home_wl_tv_storeList_title"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="20dp"
                    android:layout_marginTop="30dp"
                    android:text="@string/HomeFragmentWL_storeList_title"
                    android:textColor="@color/black"
                    android:textSize="19sp"
                    android:textStyle="bold"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toBottomOf="@id/fg_home_wl_iv_center_banner" />

                <View
                    android:id="@+id/fg_home_wl_layout_sticky"
                    android:layout_width="match_parent"
                    android:layout_height="?actionBarSize"
                    android:background="@color/black"
                    app:layout_constraintTop_toBottomOf="@id/fg_home_wl_tv_storeList_title"/>


                <View
                    android:layout_width="match_parent"
                    android:layout_height="2000dp"
                    app:layout_constraintTop_toBottomOf="@id/fg_home_wl_tv_storeList_title" />

            </androidx.constraintlayout.widget.ConstraintLayout>

        </androidx.core.widget.NestedScrollView>

    </androidx.constraintlayout.widget.ConstraintLayout>

</layout>